# multi-agent-autogen2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.idx/: dev.nix
config/: settings.local.yaml  settings.prod.yaml  settings.yaml
knowledge_base/: doc3.txt
notebook/: test_agents.ipynb
notebooks/: create_test_notebook.py  multi_agent_flow.ipynb  test_agentic_system.ipynb  test_supervisor_agent.py
prompts/: code_generator.py  knowledge_retriever.py  sql_generator.py  user_proxy.py
src/: app.py  config_loader.py  main.py
src/agents/: code_generator.py  knowledge_retriever.py  sql_generator.py  user_proxy.py
src/autogen_app/: __init__.py  agents.py  llm_provider.py  vector_store.py
src/utils/: conversation_manager.py  prompt_loader.py  utils.py  vector_store.py
