[project]
name = "autogen-app"
version = "0.1.0"
description = "An Autogen based application"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "uvicorn>=0.26.0",
    "fastapi>=0.109.0",
    "pyyaml>=6.0.1",
    "autogen>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "boto3>=1.34.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "uv>=0.1.80",
    "pytest>=7.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_app"]

[tool.uv]
resolution = "highest"
