[project]
name = "autogen_app"
version = "0.1.0"
description = "A multi-agent application using AutoGen"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "uvicorn",
    "fastapi",
    "pyyaml",
    "langchain",
    "pgvector",
    "psycopg2-binary",
    "faiss-cpu",
    "sentence-transformers",
    "boto3",
    "google-generativeai",
    "python-dotenv",
    "jupyter",
    "notebook",
    "autogen[gemini]",
    "vertexai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_app"]

[tool.uv]
resolution = "highest"
